Fix transparent background issue on Safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 @layer base {
   :root {
     /* --background: 32 100% 95%; */
-    --background: 0 0 100%;
+    --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
